# snakemake-executor-plugin-kueue

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dev-requirements.txt
.github/workflows/: ci_true_api.yml  main.yaml  release-please.yml
docs/: further.md  intro.md
example/: README.md  cluster-queue.yaml  kind-cluster.yaml  registry-service.yaml  registry.yaml  resource-flavor.yaml  user-queue.yaml
example/flux-operator/: README.md  Snakefile
example/flux-operator/hello-world/: README.md  Snakefile
example/flux-operator/lammps/: Dockerfile  README.md  Snakefile
example/hello-world/: README.md  Snakefile  oras.yaml
example/mpi-operator/hello-world/: README.md  Snakefile
scripts/: oras-entrypoint.sh
snakemake_executor_kueue/: __init__.py  custom_resource.py  executor.py  utils.py  version.py
snakemake_executor_plugin_kueue/: __init__.py  custom_resource.py  executor.py  oras.py  template.py  utils.py
